--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -29,6 +29,10 @@
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
                 android:id="@+id/main_add_fab"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="bottom|end"
+                android:layout_margin="@dimen/layout_16dp"
                 style="?attr/styleFab"
                 app:srcCompat="@drawable/ic_add"
                 app:useCompatPadding="false"/>
