--- a/app/src/main/res/layout/item_color.xml
+++ b/app/src/main/res/layout/item_color.xml
@@ -1,38 +1,41 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/color_parent_container"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_gravity="center"
-    android:gravity="center"
-    android:padding="@dimen/layout_8dp">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <!--  layout_width must be match_parent for better performance in dialog grid.  -->
-
-    <View
-        android:id="@+id/color_background_view"
-        android:layout_width="@dimen/icon_48dp"
-        android:layout_height="@dimen/icon_48dp"
-        android:layout_gravity="center"
-        android:background="@drawable/ic_color"
-        android:importantForAccessibility="no" />
-
-    <ImageView
-        android:id="@+id/color_check_image"
-        android:layout_width="wrap_content"
+    <FrameLayout
+        android:id="@+id/parent_container"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:importantForAccessibility="no"
-        app:srcCompat="@drawable/ic_check" />
+        android:gravity="center"
+        android:padding="@dimen/layout_8dp">
 
-    <!-- android:contentDescription - programmatically setup -->
-    <View
-        android:id="@+id/color_click_view"
-        android:layout_width="@dimen/icon_48dp"
-        android:layout_height="@dimen/icon_48dp"
-        android:layout_gravity="center"
-        android:background="?attr/selectableItemBackgroundBorderless"
-        android:contentDescription="@null" />
+        <View
+            android:id="@+id/background_view"
+            android:layout_width="@dimen/icon_48dp"
+            android:layout_height="@dimen/icon_48dp"
+            android:layout_gravity="center"
+            android:background="@drawable/ic_color"
+            android:importantForAccessibility="no" />
 
-</FrameLayout>
+        <ImageView
+            android:id="@+id/check_image"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:importantForAccessibility="no"
+            app:srcCompat="@drawable/ic_check" />
+
+        <!-- android:contentDescription - programmatically setup -->
+        <View
+            android:id="@+id/click_view"
+            android:layout_width="@dimen/icon_48dp"
+            android:layout_height="@dimen/icon_48dp"
+            android:layout_gravity="center"
+            android:background="?attr/selectableItemBackgroundBorderless"
+            android:contentDescription="@null" />
+
+    </FrameLayout>
+
+</layout>
