--- a/app/src/main/res/drawable/bg_sheet_dialog.xml
+++ b/app/src/main/res/drawable/bg_sheet_dialog.xml
@@ -4,7 +4,7 @@
        android:shape="rectangle">
 
     <solid android:color="?attr/clPrimary" />
-    <corners android:radius="@dimen/radius_8dp"/>
+    <corners android:radius="@dimen/dialog_radius" />
     <size tools:height="@dimen/icon_48dp" tools:width="@dimen/icon_128dp"/>
 
 </shape>
