--- a/app/src/main/res/values/strings_app.xml
+++ b/app/src/main/res/values/strings_app.xml
@@ -114,7 +114,7 @@
     <string name="snackbar_action_cancel">Cancel</string>
 
     <!--  Error text  -->
-    <string name="error_something_wrong">Something went wrong… But we will fix it!</string>
+    <string name="error_something_wrong">Something went wrong… But we will try to fix it!</string>
 
     <string name="error_start_activity">
         Sorry, we didn\'t find any application to do this action :(
