--- a/app/src/main/res/layout/activity_preference.xml
+++ b/app/src/main/res/layout/activity_preference.xml
@@ -7,7 +7,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        tools:context="sgtmelon.scriptum.cleanup.presentation.screen.ui.impl.preference.PreferenceActivity">
+        tools:context="sgtmelon.scriptum.infrastructure.screen.preference.PreferenceActivity">
 
         <include
             android:id="@+id/toolbar_include"
