--- a/app/src/main/res/values/strings_preference.xml
+++ b/app/src/main/res/values/strings_preference.xml
@@ -68,7 +68,7 @@
     <string name="pref_summary_alarm_signal">will be used for notify you</string>
     <string name="pref_summary_alarm_melody">Will be play on notification</string>
     <string name="pref_summary_alarm_melody_search">Check out your melodies</string>
-    <string name="pref_summary_alarm_melody_empty">Sorry, we don\'t find any melodies! :(</string>
+    <string name="pref_summary_alarm_melody_empty">Sorry, we didn\'t find any melodies! :(</string>
     <string name="pref_summary_alarm_volume">Percent of volume: %d%%</string>
     <string name="pref_summary_alarm_increase">Smooth volume increase from minimum</string>
 
